CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )
PROJECT ( MyLib C CXX)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

ADD_SUBDIRECTORY ( libcommon )
ADD_SUBDIRECTORY ( libmat )
ADD_SUBDIRECTORY ( libunittest )
# ADD_SUBDIRECTORY ( xunittest )
ADD_SUBDIRECTORY ( libdesignpat )
ADD_SUBDIRECTORY ( xtestdesignpat )
